@@ -25,6 +25,8 @@ removal of no-op rule commands in an initial pass).
 revised to make use of the new features, for speed, to produce fewer
 duplicates, and to attempt additional kinds of candidate passwords (such
 as for years 2010 through 2019 with "year-based" rules).
+* The idle priority emulation code has been optimized for lower overhead when
+there appears to be no other demand for CPU time.
 * The default for the Idle setting has been changed from N to Y.
 
 The following changes have been made between John 1.7.3.1 and 1.7.3.4:
@@ -107,4 +109,4 @@ Mac OS X (PowerPC and x86), SCO, BeOS.
 * Bug and portability fixes, and new bugs.
 * Bonus: "Strip" cracker included in the default john.conf (john.ini).
 
-$Owl: Owl/packages/john/john/doc/CHANGES,v 1.34 2009/12/25 18:44:34 solar Exp $
+$Owl: Owl/packages/john/john/doc/CHANGES,v 1.35 2009/12/25 20:47:34 solar Exp $
